--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "offsite-client",
-    "description": "Offsite",
+    "name": "radical-client",
+    "description": "Radical",
     "version": "1.0.0",
     "homepage": "",
     "license": "Proprietary",
