--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-    "name": "radical-client",
-    "description": "Radical",
-    "version": "1.0.0",
-    "homepage": "",
-    "license": "Proprietary",
-    "private": true,
-    "dependencies": {
-        "bower": "^1.3.1",
-        "http-server": "^0.6.1",
-        "karma": "~0.10",
-        "karma-junit-reporter": "^0.2.2",
-        "protractor": "^1.1.1",
-        "shelljs": "^0.2.6"
-    },
-    "scripts": {
-        "postinstall": "bower install",
-        "prestart": "npm install",
-        "start": "http-server ./app/ -a 0.0.0.0 -p $PORT -c-1 --cors",
-        "preupdate-webdriver": "npm install",
-        "pretest": "nohup bash -c 'http-server ./app/ -a 0.0.0.0 -p 9000 -c-1 2>&1 &' && echo 'Started web server on port 9000'",
-        "posttest": "ps ax | grep 'http-server ./app/ -a 0.0.0.0 -p 9000 -c-1' | grep -v 'grep' | awk '{print $1}' | xargs kill -9 && echo 'Killed web server'",
-        "prepspec": "npm start"
-    }
+  "name": "radical-client",
+  "private": true,
+  "version": "0.0.3",
+  "description": "A starter project for AngularJS Material",
+  "repository": "https://github.com/angular/material-start",
+  "license": "MIT",
+  "devDependencies": {
+    "http-server": "^0.6.1",
+    "bower": "^1.3.1"
+  },
+  "scripts": {
+    "postinstall": "bower update",
+    "start": "http-server ./app/ -p8000"
+  }
 }
