--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bower": "^1.3.1"
   },
   "scripts": {
-    "preinstall": "npm install",
+    "prestart": "npm install",
     "postinstall": "bower update",
     "start": "http-server ./app/ -p8000"
   }
