--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "radical-client",
+  "description": "Radical",
+  "version": "1.0.0",
+  "homepage": "",
+  "license": "Proprietary",
   "private": true,
-  "version": "0.0.3",
-  "description": "A starter project for AngularJS Material",
-  "repository": "https://github.com/angular/material-start",
-  "license": "MIT",
-  "devDependencies": {
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1"
+  "dependencies": {
+    "bower": "^1.3.1",
+    "http-server": "^0.6.1"
   },
   "scripts": {
-    "prestart": "npm install",
-    "postinstall": "bower install",
+    "postinstall": "bower update",
     "start": "http-server ./app/ -p8000"
   }
 }
