--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "homepage": "",
   "license": "Proprietary",
   "private": true,
+  "engines": {
+    "node": "4.1.1"
+  },
   "dependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1"
   },
   "scripts": {
+    "prestart": "npm install",
     "postinstall": "bower update",
     "start": "http-server ./app/ -p8000"
   }
