--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "Proprietary",
   "private": true,
   "engines": {
-    "node": "4.1.1"
+    "node": "5.8.0",
+    "npm": "3.7.3"
   },
   "dependencies": {
     "bower": "^1.3.1",
