--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,11 @@
   "license": "Proprietary",
   "private": true,
   "dependencies": {
-    "angular": "1.5.0-beta.2",
-    "angular-animate": "1.5.0-beta.2",
-    "angular-touch": "1.5.0-beta.2",
+    "angular": "1.5.0",
+    "angular-animate": "1.5.0",
+    "angular-touch": "1.5.0",
     "angular-ui-router": "0.2.15",
-    "angular-resource": "1.5.0-beta.2",
+    "angular-resource": "1.5.0",
     "angular-local-storage": "~0.2.2",
     "ng-token-auth": "^0.0.28",
     "angular-ui-utils": "~0.2.3",
