--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "prestart": "npm install",
     "postinstall": "bower update",
-    "start": "http-server ./app/ -p8000"
+    "start": "http-server ./app/ -a 0.0.0.0 -p $PORT -c-1 --cors"
   }
 }
